# Fight-Result-Predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  buildspec-backend.yml  buildspec-frontend.yml
backend/: .env.example  README.md  dockerfile  pyproject.toml  requirements.txt
backend/data/reference/: fighter_aliases.csv
backend/db/: README.md  schema.sql
backend/src/api/: README.md  app.py  stats.py
backend/src/historical_scraper/: README.md  main.py
backend/src/historical_scraper/core/: __init__.py  aliases.py  csv_manager.py  utils.py
backend/src/historical_scraper/sources/: odds_scraper.py  rankings_scraper.py  ufcstats_scraper.py
backend/src/model_training/: retrain_models.py
backend/src/shared/: __init__.py  config.py
backend/src/upcoming_scraper/: README.md  __init__.py  __main__.py  loaders.py  main.py  predictions.py
backend/src/upcoming_scraper/core/: __init__.py  csv_manager.py
backend/src/upcoming_scraper/sources/: __init__.py  ufcstats_scraper.py
backend/tests/: README.md
data/: df.csv  df_columns.csv  df_finishes.csv  train2-25.csv
frontend/: .env.example  README.md  package-lock.json  package.json
historical_scraper/: README.md  __init__.py  __main__.py  main.py  recent_fights.csv  requirements.txt
models/: bantam.joblib  final_summary.csv  fly.joblib  global.joblib  heavy.joblib  lhw.joblib  light.joblib  middle.joblib  wbantam.joblib  welter.joblib  wfly.joblib  wstraw.joblib
notebooks/: 1-data-entry-and-cleaning.ipynb  2-data-exploration-and-analysis.ipynb  3-model-selection-and-backtest.ipynb  3-modeling.ipynb  (+3 more)
(+48 files in other folders)
