[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fight-result-predictor-backend"
version = "0.1.0"
description = "Backend packages and scrapers for fight-result-predictor."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "fastapi",
    "pandas",
    "requests",
    "psycopg[binary]",
    "uvicorn[standard]",
    "numpy",
    "scikit-learn",
    "xgboost",
    "joblib",
    "boto3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["historical_scraper*", "upcoming_scraper*", "api*", "model_training*", "shared*"]
